# spend-time-together

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  errors  pyproject.toml
app/: main.py
app/api/: base_schemas.py  constants.py  exceptions.py  response_patterns.py  responses.py  routes.py  routing.py
app/api/activity/: constants.py  controller.py  serializers.py  ws.py  ws_connection.py  ws_events.py  ws_handlers.py
app/api/auth/: controller.py  deps.py  exceptions.py  serializers.py
app/api/rooms/: controller.py  exceptions.py  serializers.py
app/api/users/: controller.py  exceptions.py  serializers.py
app/core/: exceptions.py  mixins.py
app/core/activity/: constants.py  dto.py  exceptions.py  models.py  repository.py  service.py
app/core/auth/: dto.py  exceptions.py  models.py  repository.py  service.py
app/core/rooms/: constants.py  dto.py  exceptions.py  models.py  repository.py  service.py
app/core/users/: constants.py  dto.py  exceptions.py  models.py  repository.py  service.py
app/di/: containers.py  repositories.py  services.py
migration/: README.md  env.py
migration/versions/: 0e98f400831c_variant_discription_to_text.py  2fcfad900da8_create_users_table.py  3f684f72f4dc_add_fields_to_user_tables.py  6ea3d346532d_create_users_session_table.py  9da90ff2d68e_creator_user_id_to_activity.py  b7abf1d9779a_add_user_variants_fields.py  ee3f5e9f14b0_add_activity_tables.py  f12f87b53dc7_create_room_tables.py
settings/: database.py
tests/: conftest.py
tests/factories/: base.py  users.py
(+3 files in other folders)
